fixed z-index for menu

--- a/app/assets/stylesheets/video.css.scss
+++ b/app/assets/stylesheets/video.css.scss
@@ -83,7 +83,7 @@ img.channel-banner,
     position: absolute;
     top: 10px;
     right: 10px;
-    z-index: $zindex-popover;
+    z-index: 99;
   }
 }
 
